--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/DocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/DocumentElementTest.html
@@ -68,8 +68,8 @@
 	
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         test_construct_whenPluginResourceIsUnavailable_firesError();
-         test_destroy_whenUnmarshalled_ResetsProperties();
+//          test_construct_whenPluginResourceIsUnavailable_firesError();
+//          test_destroy_whenUnmarshalled_ResetsProperties();
       });
 
       JsHamcrest.Integration.JsUnit();
