--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -77,6 +77,7 @@
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/OptionsResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/RemoteResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/StringTokenizer.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/HierarchicalMenuWidget/HierarchicalMenuWidget.js"></script>
