CompositeDataElement propagates index variables to nested elements.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDataElementTest.html
@@ -148,8 +148,8 @@
 		//runs a test function during debugging
 		function runTestFunction(){
 			setUp();
-			//test_construct_whenMaxOccuresIsGiven_constructsSiblingElements();
-			tearDown();
+			test_construct_whenMaxOccuresIsGiven_constructsSiblingElements();
+			//tearDown();
 		}
     </script>
 </head>
