--- a/Implementation/WebTier/WebContent/Content/HtmlDocument_en.html
+++ b/Implementation/WebTier/WebContent/Content/HtmlDocument_en.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>HTML Content</h1>
+   <h2>Smart Document Example</h2>
    <p>This document's content consist of only pure HTML elements. Doesn't contains smart template (static) elements, neigther data sources. This feature mainly used for publishing existing content, without modification.</p>
 </body>
 </html>
