--- a/Implementation/WebTier/WebContent/Content/HtmlDocument_hu.html
+++ b/Implementation/WebTier/WebContent/Content/HtmlDocument_hu.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>HTML tartalom</h1>
+   <h2>Okos dokumentum példa</h2>
    <p>Ennek a dokumentumnak a tartalma pusztán HTML elemekből áll. Itt nincs sem dokumentum sablon elem (statikus elem), sem adatforrás. Ez a szolgáltatás leginkább meglévő tartalom, változtatás nélküli megjelenítésére használható.</p>
 </body>
 </html>
