DynamicDocument example now uses FormElement to display data.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/FormElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/FormElementTest.html
@@ -121,7 +121,7 @@
       function runTestFunction(){
          setUp();
          test_construct_createsFormElement();
-         tearDown();
+         //tearDown();
       }
     </script>
 </head>
