--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -52,6 +52,8 @@
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentFooter.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentHeader.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/FormElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/FormField.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/ConfigurationTimeoutException.js"></script>
