--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -104,6 +104,8 @@
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/Tab.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/TabSelectedMessage.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/TabWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarButton.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIController/UnconfiguredWebUIControllerException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIController/WebUIController.js"></script>
