ToolBarWidget now handles separator items.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
@@ -29,6 +29,7 @@
          newsuite.addTestPage("../SkinSelectorWidget/SkinSelectorWidgetTest.html");
          newsuite.addTestPage("../SmartDocument/SmartDocumentTestSuite.html");
          newsuite.addTestPage("../TabWidget/TabWidgetTestSuite.html");
+         newsuite.addTestPage("../ToolBarWidget/ToolBarWidgetTestSuite.html");
          newsuite.addTestPage("../WebUIConfiguration/WebUIConfigurationTest.html");
          newsuite.addTestPage("../WebUIController/WebUIControllerTest.html");
          newsuite.addTestPage("../WebUILogger/WebUILoggerTest.html");
