--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -80,6 +80,7 @@
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/RemoteResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/UniqueId.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/HierarchicalMenuWidget/HierarchicalMenuWidget.js"></script>
@@ -105,6 +106,8 @@
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/TabSelectedMessage.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/TabWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarButton.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarDivider.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarButtonFactory.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIController/UnconfiguredWebUIControllerException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIConfiguration/WebUIConfiguration.js"></script>
